fix for pre-wrap

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,5 +18,5 @@ $govuk-global-styles: true;
 }
 
 div.govuk-prose-scope, p {
-    white-space: pre;
+    white-space: pre-wrap;
 }
